<resources>
    <string name="app_name">Money Tracking</string>
    <!--Add Expenses Fragment  -->
    <string name="btn_add_expensive">Добавить</string>
    <string name="drop_down_menu_label">Выберите категорию</string>
    <string name="text_field_sum_expense_label">Введите сумму расхода</string>
    <!--Cost History Fragment  -->
    <string name="type_operation_expense">Расход</string>
    <string name="dialog_title">Удаление расхода</string>
    <string name="dialog_message"> Вы уверены что хотите удалить запись?</string>
    <!--Home Fragment  chip-->
    <string name="chip_text_today">Сегодня</string>
    <string name="chip_text_week">Неделя</string>
    <string name="chip_text_month">Месяц</string>
    <string name="chip_text_year">Год</string>
    <string name="chip_text_select_date">Период</string>

    <!--Home Fragment total amount text-->
    <string name="total_amount_today">Сумма расходов за сегодня:</string>
    <string name="total_amount_week">Сумма расходов за неделю:</string>
    <string name="total_amount_month">Сумма расходов за месяц:</string>
    <string name="total_amount_year">Сумма расходов за год:</string>
    <string name="total_amount_startPeriod">Сумма расхода от</string>
    <string name="total_amount_EndPeriod">по</string>

    <!--Update Expenses Fragment-->
    <string name="btn_update_expensive">Обновить</string>
</resources>