<?xml version="1.0" encoding="utf-8"?>

    <com.google.android.material.chip.ChipGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipToday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/chip_text_today"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWeek"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/chip_text_week"
            app:layout_constraintStart_toEndOf="@+id/chipToday"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMonth"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/chip_text_month"
            app:layout_constraintStart_toEndOf="@+id/chipWeek"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipYear"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/chip_text_year"
            app:layout_constraintStart_toEndOf="@+id/chipMonth"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSelectDate"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/chip_text_select_date"
            app:layout_constraintStart_toEndOf="@+id/chipMonth"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.chip.ChipGroup>


